--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,46 @@
-version: "3.8"
+version: "2.4"
 
 services:
   mysql:
-    user: "${UID}:${GID}" 
-    image: mysql:5.7
-    container_name: mysql
+    image: mysql:8.0
+    container_name: flask_mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: devops
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: admin
+      MYSQL_DATABASE: flaskdb
+      MYSQL_USER: flaskuser
+      MYSQL_PASSWORD: flaskpass
     volumes:
-      - ./mysql-data:/var/lib/mysql
-      - ./message.sql:/docker-entrypoint-initdb.d/message.sql  
-    networks:
-      - twotier
+      - two-tier-volume:/var/lib/mysql
+    ports:
+      - "3306:3306"
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1"]
       interval: 10s
       timeout: 5s
-      retries: 5
-      start_period: 60s
+      retries: 6
+      start_period: 30s
+    networks:
+      - two-tier-network
 
-  flask-app:
-    image: trainwithshubham/two-tier-flask-app:latest
-    container_name: flask-app
-    ports:
-      - "5000:5000"
+  flask:
+    build: .
+    container_name: flask_app
     environment:
       MYSQL_HOST: mysql
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
-      MYSQL_DB: devops
+      MYSQL_DB: flaskdb
+      MYSQL_USER: flaskuser
+      MYSQL_PASSWORD: flaskpass
+    ports:
+      - "5000:5000"
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     networks:
-      - twotier
-    restart: always
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:5000/health || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+      - two-tier-network
+
+volumes:
+  two-tier-volume:
 
 networks:
-  twotier:
+  two-tier-network:
+
