Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,4 +31,8 @@ deploy_job:
 production_test_job:
     stage: test
     script:
-        - echo "Testing for production deployment"
+    - mkdir -p logs
+    - echo "Testing..." > logs/test.log
+    artifacts:
+        paths:
+            - logs/
