--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,22 +11,30 @@ build_job:
     stage: build
     script: 
         - echo "This build is done using docker by $OWNER_NAME"
+    tags:
+        - dev
 
 
 test_job:
     stage: test
     script:
         - echo "This is testing for docker build"
+    tags:
+        - dev
 
 push_job:
     stage: push
     script:
         - echo "This is pushing to docker-hub"
+    tags:
+        - dev
 
 deploy_job:
     stage: deploy
     script:
         - echo "Deploy to EC2 instance is going on"
+    tags:
+        - dev
 
 production_test_job:
     stage: test
@@ -37,3 +45,5 @@ production_test_job:
         paths:
             - logs/
         expire_in: 1 hour
+    tags:
+        - dev
