--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,13 +4,11 @@ stages:
     - push
     - deploy
 
-variables:
-    OWNER_NAME: "Muhammad Fahad"
 
 build_job:
     stage: build
     script: 
-        - echo "This build is done using docker by $OWNER_NAME"
+        docker build -t flask-app:latest .
     tags:
         - dev
 
@@ -18,32 +16,22 @@ build_job:
 test_job:
     stage: test
     script:
-        - echo "This is testing for docker build"
+        - echo "This is testing......."
     tags:
         - dev
 
 push_job:
     stage: push
     script:
-        - echo "This is pushing to docker-hub"
+        - docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+        - docker image tag flask-app:latest $DOCKERHUB_USERNAME/flask-app:latest
+        - docker push $DOCKERHUB_USERNAME/flask-app:latest
     tags:
         - dev
 
 deploy_job:
     stage: deploy
     script:
-        - echo "Deploy to EC2 instance is going on"
-    tags:
-        - dev
-
-production_test_job:
-    stage: test
-    script:
-        - mkdir -p logs
-        - echo "Testing..." > logs/test.log
-    artifacts:
-        paths:
-            - logs/
-        expire_in: 1 hour
+        - docker-compose up -d
     tags:
         - dev
